# github-user-language-breakdown

./: .gitignore  .prettierignore  .prettierrc.json  COLORS  Cargo.toml  LICENSE  README.md  TODO  eslint.config.js  index.html  package-lock.json  package.json  server.js  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vercel.json  vite.config.ts
api/: langs.rs
api/lib/: api_utils.rs  config.rs  github_auth.rs  github_fetch.rs  langs_calculator.rs  lib.rs
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.jsx  index.css
client/src/components/: ChartBox.css  ChartBox.jsx  Home.css  Home.jsx  Loading.css  Loading.jsx  UserBox.css  UserBox.jsx
client/src/modules/: chartOptions.js  colors.js
modules/: getAvatar.js  getLang.js
src/: App.tsx  TraceLd.GitHubLangStats.sln  global.json  index.css
src/TraceLd.GitHubLangStats.Backend/: Program.cs  TraceLd.GitHubLangStats.Backend.csproj  host.json
src/TraceLd.GitHubLangStats.Backend/Queries/: GetGitHubLangsStats.cs
src/TraceLd.GitHubLangStats.Backend/Triggers/: HttpTrigger.cs
src/TraceLd.GitHubLangStats.Frontend/: .prettierignore  .prettierrc  package-lock.json  package.json  rollup.config.js  tailwind.config.js  tsconfig.json
src/TraceLd.GitHubLangStats.Frontend/src/: App.svelte  config.ts
src/TraceLd.GitHubLangStats.Frontend/src/core/: apiResult.ts
src/components/: api_error.tsx  github_repo_button.tsx  gulb_form.tsx  langs_chart.tsx  main_content.tsx  navbar.tsx
src/components/ui/: chart.tsx
src/lib/: github.ts  github_colours.ts  gulb_service.ts
(+10 files in other folders)
