[package]
name = "gulb-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127", features = ["raw_value"] }
url = "2.5.2"
vercel_runtime = "1.1.4"
octocrab = { version = "0.39.0", features = ["stream"] }
anyhow = "1.0.88"
secrecy = "0.8.0"
thiserror = "1.0.63"
problem_details = "0.6.0"
http = "1.1.0"
futures = "0.3.30"

[lib]
path = "api/lib/lib.rs"

[[bin]]
name = "user-langs-api"
path = "api/langs.rs"
